--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,6 +1,9 @@
 .wrapper {
   padding-top: 50px;
-  background: #ECEFF1;
+  background-color: #8EC5FC;
+background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+
+
   height: 100%;
   display: flex;
   flex-flow: row wrap;
